syntax = "proto3";
package sst;

import "sst.proto";

message Login {
    string user_name = 1;
    string pass_word = 2;
}